# Study.CPP

./: .gitignore  CMakeLists.txt  CompileAndStart.sh  DB.cpp  DB.h  DB_records.txt  SendFilesToServer.sh  ThingsToRemember  blank.html  cgi.cpp  cgi_class.cpp  cgi_class.h  cgi_programm  index.html  programm.cgi  session.cpp  session.h  start.html  str_methods.cpp  str_methods.h
